Fix image alignment to the right

--- a/src/implementations/vanilla/components/content-item/_content-item-print.scss
+++ b/src/implementations/vanilla/components/content-item/_content-item-print.scss
@@ -22,6 +22,7 @@ $_image-border-color: null !default;
 }
 
 .ecl-content-item__content-block {
+  margin-inline-end: auto;
   max-width: 80ch;
 }
 
