--- a/src/implementations/vanilla/components/content-item/_content-item.scss
+++ b/src/implementations/vanilla/components/content-item/_content-item.scss
@@ -28,6 +28,7 @@ $_image-border-color: null !default;
 
 .ecl-content-item__content-block {
   font: map.get(theme.$font, 'm');
+  margin-inline-end: auto;
   max-width: 80ch;
 }
 
